# workspace_manager

./: .gitignore  API_REFERENCE.md  README.md  TESTING.md  pytest.ini
containers/aire/: Dockerfile
tests/: README.md  conftest.py
tests/integration/: test_copy_streaming.py  test_http_web_access.py  test_multi_user_and_cleanup.py  test_upload_handoff.py  test_workspace_api_http.py
tests/plugins/: __init__.py  generic_http.py
tests/unit/: test_client_security.py  test_exec_stream_bridge.py  test_splunk_workspace_security.py  test_streaming_tar.py  test_token_endpoints_and_client.py
wm_client/: README.md  pyproject.toml  requirements.txt
wm_client/src/wm_client/: __init__.py  config.py  constants.py
wm_client/src/wm_client/applications/: __init__.py  splunk_workspace.py
wm_server/: .env.example  __init__.py  pyproject.toml  requirements.txt  wm_build_backend.py
wm_server/app/: config.py  main.py  runner.py
wm_server/app/applications/: __init__.py  base.py  factory.py  generic.py
wm_server/app/plugins/: builtin.py  manager.py
wm_server/app/routers/: plugins.py  workspaces.py
wm_server/app/workspaces/: docker_utils.py
wm_server/src/wm_server/: cli.py
wm_server/src/wm_server/app/: __init__.py  config.py  deps.py  logging_setup.py  models.py  security.py
wm_server/src/wm_server/app/plugins/: base.py
wm_server/src/wm_server/app/workspaces/: checkpoints.py  core.py  fs_utils.py  lifecycle.py
wm_server/tests/: conftest.py  test_applications.py  test_presigned_upload_integration.py  test_runner.py  test_volume_cleanup.py
