[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "workspace-manager-client"
version = "0.1.0"
description = "Python SDK client for the WorkspaceManager API."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Splunky" }]
dependencies = [
  "requests>=2.31.0",
  "pydantic>=2.7.0",
  "typing-extensions>=4.8.0",
]

[project.optional-dependencies]
testing = [
  "pytest>=7.0",
  "pytest-timeout>=2.2",
]

[tool.hatch.build.targets.wheel]
# Package code is expected under: wm_client/src/wm_client
packages = ["src/wm_client"]

[tool.hatch.build.targets.sdist]
include = [
  "/src/wm_client",
  "/pyproject.toml",
  "/README.md",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.black]
line-length = 120
target-version = ["py310"]
