[build-system]
requires = []
build-backend = "wm_build_backend"
backend-path = ["."]

[project]
name = "workspace-manager-client"
version = "0.1.0"
description = "Python SDK client for the WorkspaceManager API."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Splunky" }]
dependencies = [
  "requests>=2.31.0",
  "pydantic>=2.7.0",
  "typing-extensions>=4.8.0",
]

[project.optional-dependencies]
testing = [
  "pytest>=7.0",
  "pytest-timeout>=2.2",
]


[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.black]
line-length = 120
target-version = ["py310"]
